<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context="com.example.sonuroy.attendancesheet.MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text1"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/teacher_s_register_page"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:text=""
            android:textSize="22sp"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:text=""
            android:textSize="22sp"
            android:inputType="numberPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:textSize="15sp"
        android:textColor="#000"/>
    <Button
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="bold"
        android:layout_marginTop="35sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onRegisterClicked"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/if_not_registered"
        android:textSize="15sp"
        android:textColor="#000"/>
    </TableLayout>
</ScrollView>
</LinearLayout>
