<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sonuroy.attendancesheet.LogInActivity"
    android:orientation="vertical"
     android:focusableInTouchMode="true">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:text="Teacher's LogIn Page"
        android:textStyle="bold"
        android:textColor="#000"
        android:gravity="center"
        android:textSize="20sp"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="22sp"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="22sp"
            android:inputType="numberPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
    <CheckBox
        android:id="@+id/id_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:textSize="15sp"
        android:textColor="#000"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/log"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:onClick="onLogInClicked"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="login_here"
        android:textStyle="bold"
        android:textSize="15sp"/>

</LinearLayout>
